--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,8 @@ h2{
     text-align: center;
     color: white;
 }
+
+@media only screen and (max-width: 600px) {
+    .card {
+      width: 100%;
+    }
