--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ h2{
     color: white;
 }
 
-@media only screen and (max-width: 600px) {
+
+@media only screen and (max-width: 400px) {
     .card {
       width: 100%;
-    }
+    }}
