--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ h2{
     color: white;
 }
 
+section{
+    text-align: center;
+    align-items: center;
+}
 
 @media only screen and (max-width: 400px) {
     .card {
